fix: fix a bug that caused a small 20px horizontal overflow of the entire page

--- a/src/styles/presentgame.css
+++ b/src/styles/presentgame.css
@@ -1,6 +1,7 @@
 #present-game {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 #present-game iframe {
